# mirea-dpo-aie

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: README.md
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb  report.md
project/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  self-checklist.md
project/artifacts/: runs.csv
project/configs/: best_classifier_config.json
project/data/: data_description.md
project/notebooks/: exp01_eda.ipynb  exp02_simpleCNN.ipynb  exp03_ResNet18.ipynb
project/src/trashnet/data/: prepair_train.py  transforms.py
project/src/trashnet/models/: inference.py  resnet18.py  train.py
project/src/trashnet/service/: api.py  cli.py
project/src/trashnet/utils/: settings.py
project/tests/: test_inference.py  test_train.py
(+11 files in other folders)
