[project]
name = "project"
version = "0.1.0"
description = "Trash classification model"
readme = "README.md"
authors = [
    { name = "GingerKittenOwO", email = "110766733+GingerKittenOwO@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
trashnet-cli = "trashnet.service.cli:app"

